package fr.parisnanterre.noah.Entity;

public enum RoleType {
    ROLE_USER,
    ROLE_ADMIN
}
