package fr.parisnanterre.noah.Entity;


public enum Statut {
    EN_ATTENTE, ACCEPTE, REFUSE
}
