package fr.parisnanterre.noah.Entity;

public enum StatutNotation {
    PENDING,
    APPROVED,
    SUSPENDED
}
